fix: navbar overflow

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -183,7 +183,7 @@ $nav-trans: 350ms ease;
     font-size: var(--fs-50);
 
     overflow-x: hidden;
-    overflow-y: visible;
+    overflow-y: hidden;
 
     transition: transform 200ms ease, background-color 350ms ease;
 
